rspec-tools/tests/resources/invalid-rules/S4225/csharp/rule.adoc
A rule with an invisible Unicode character preceding the open '{' in the metadata.json
